--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "cross-fetch": "^3.0.5",
     "express": "^4.17.1",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^2.6.0"
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
