--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.1.3",
+    "express-throttle": "^2.0.0",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
